Add testing against JDK 24